[gd_scene load_steps=27 format=3 uid="uid://ccj7kggjifcmb"]

[ext_resource type="PackedScene" uid="uid://c5jqm5klqmyqp" path="res://Shaders/effect_layer.tscn" id="1_umdpi"]
[ext_resource type="AudioStream" uid="uid://dvltovrs1dq3b" path="res://Music/Background_music.mp3" id="2_85cxt"]
[ext_resource type="Script" path="res://Scripts/Menu/ExitHandler.gd" id="3_xwuij"]
[ext_resource type="Script" path="res://Scripts/LevelScripts/Level10.gd" id="4_5bp10"]
[ext_resource type="PackedScene" uid="uid://cpmnlu2ecycaj" path="res://Objects/Gate.tscn" id="5_2y1mr"]
[ext_resource type="Texture2D" uid="uid://dek2lg53lpyc4" path="res://Graphics/GenericTileset.png" id="6_leqgb"]
[ext_resource type="Texture2D" uid="uid://deqkgxpntioog" path="res://Graphics/Effects/Vignette.png" id="7_j0vy7"]
[ext_resource type="AudioStream" uid="uid://dmsa37uoi82nw" path="res://Music/Crash.mp3" id="7_q30kw"]
[ext_resource type="Texture2D" uid="uid://2wp0uad4bge3" path="res://Graphics/MapTileset_visual.png" id="8_ec04v"]
[ext_resource type="PackedScene" uid="uid://cuwgaeb2p8n0q" path="res://Sprites/Tentacles.tscn" id="9_epe7b"]
[ext_resource type="SpriteFrames" uid="uid://caki7lkf224vc" path="res://Animation/Tentacles_sprite_frames.tres" id="10_c4als"]
[ext_resource type="PackedScene" uid="uid://hdct1bg8ky3i" path="res://Sprites/Sign.tscn" id="12_r185y"]
[ext_resource type="Texture2D" uid="uid://yqa5vdxe8nqw" path="res://Graphics/Steel.png" id="13_gpfp7"]
[ext_resource type="Texture2D" uid="uid://4ucgj3g84kbl" path="res://Graphics/Silver.png" id="14_sb36p"]
[ext_resource type="Texture2D" uid="uid://ce31f7pl6e5t7" path="res://Graphics/Sulphur.png" id="15_tpn2l"]
[ext_resource type="Texture2D" uid="uid://ivj3p0f68ije" path="res://Graphics/Mercury.png" id="16_i3ify"]
[ext_resource type="Texture2D" uid="uid://x7i12f50brul" path="res://Graphics/Lead.png" id="17_0nvkg"]
[ext_resource type="PackedScene" uid="uid://b7is0s84nwqag" path="res://Objects/Player.tscn" id="18_oq3ns"]
[ext_resource type="Texture2D" uid="uid://bamhc8j4oyxh3" path="res://Graphics/Pentagram.png" id="18_vv1kp"]
[ext_resource type="PackedScene" uid="uid://bpprpe8id6jbu" path="res://Objects/GateButton.tscn" id="20_thkxj"]
[ext_resource type="PackedScene" uid="uid://bv8fct1eu7vdj" path="res://Objects/Cloner.tscn" id="23_rmsu0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llex0"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcoj6"]
size = Vector2(224, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhfrr"]
size = Vector2(16, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsutw"]
texture = ExtResource("6_leqgb")
texture_region_size = Vector2i(32, 16)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/z_index = 1
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/custom_data_1 = true
3:0/0 = 0
3:0/0/z_index = -1
3:0/0/y_sort_origin = 1
3:0/0/custom_data_2 = true

[sub_resource type="TileSet" id="TileSet_nb5l8"]
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "wall"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "hole"
custom_data_layer_2/type = 1
sources/0 = SubResource("TileSetAtlasSource_qsutw")

[node name="Level" type="Node2D"]
z_as_relative = false
y_sort_enabled = true

[node name="EffectLayer" parent="." instance=ExtResource("1_umdpi")]

[node name="Background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_85cxt")
autoplay = true

[node name="ExitHandler" type="Node2D" parent="."]
script = ExtResource("3_xwuij")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="LevelControler" type="Node2D" parent="." node_paths=PackedStringArray("scene_reference")]
script = ExtResource("4_5bp10")
next_scene = "res://Levels/MainMenu.tscn"
scene_reference = NodePath("..")

[node name="Gate" parent="." instance=ExtResource("5_2y1mr")]
position = Vector2(-16, 58)
number_of_players = 2

[node name="Pentagram" type="Sprite2D" parent="."]
z_index = -1
z_as_relative = false
position = Vector2(-16, -39.8055)
scale = Vector2(2.25, 1.28379)
texture = ExtResource("18_vv1kp")
offset = Vector2(0, -11.12)

[node name="PentagramArea" type="Area2D" parent="Pentagram"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pentagram/PentagramArea"]
position = Vector2(0, -12.6146)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_llex0")

[node name="PentagramAudio" type="AudioStreamPlayer2D" parent="Pentagram"]
stream = ExtResource("7_q30kw")

[node name="EntryArea" type="Area2D" parent="."]
position = Vector2(0, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntryArea"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_xcoj6")

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(-16, 154)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource("RectangleShape2D_vhfrr")

[node name="TileMap" type="TileMap" parent="."]
z_as_relative = false
y_sort_enabled = true
texture_filter = 1
tile_set = SubResource("TileSet_nb5l8")
format = 2
layer_0/y_sort_enabled = true
layer_0/y_sort_origin = -16
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-393224, 131072, 0, -327688, 131072, 0, -262152, 131072, 0, -196616, 131072, 0, -131080, 131072, 0, -65544, 131072, 0, -8, 131072, 0, 65528, 131072, 0, 131064, 131072, 0, 196600, 131072, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 131072, 0, -393223, 131072, 0, -327687, 131072, 0, -262151, 131072, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 131072, 0, 65529, 131072, 0, 131065, 131072, 0, 196601, 131072, 0, 262137, 131072, 0, 327673, 0, 0, 393209, 131072, 0, 458745, 131072, 0, -393222, 131072, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 131072, 0, 196602, 131072, 0, 262138, 131072, 0, 327674, 0, 0, 393210, 131072, 0, 458746, 131072, 0, -393221, 0, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 131072, 0, 262139, 131072, 0, 327675, 131072, 0, 393211, 131072, 0, 458747, 131072, 0, -393220, 0, 0, -327684, 0, 0, -262148, 0, 0, -196612, 0, 0, -131076, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 131072, 0, 262140, 131072, 0, 327676, 131072, 0, 393212, 131072, 0, 458748, 0, 0, -393219, 0, 0, -327683, 0, 0, -262147, 0, 0, -196611, 0, 0, -131075, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 131072, 0, 327677, 131072, 0, 393213, 131072, 0, 458749, 131072, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 131072, 0, 327678, 131072, 0, 393214, 131072, 0, 458750, 131072, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, -458752, 0, 0, -393216, 0, 0, -327680, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, -458751, 0, 0, -393215, 0, 0, -327679, 0, 0, -262143, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 131072, 0, 262145, 131072, 0, 327681, 131072, 0, 393217, 131072, 0, -458750, 0, 0, -393214, 0, 0, -327678, 0, 0, -262142, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 131072, 0, 196610, 131072, 0, 262146, 131072, 0, 327682, 131072, 0, 393218, 131072, 0, -458749, 0, 0, -393213, 0, 0, -327677, 0, 0, -262141, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 131072, 0, 196611, 131072, 0, 262147, 131072, 0, 327683, 131072, 0, 393219, 131072, 0, -458748, 131072, 0, -393212, 131072, 0, -327676, 131072, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 131072, 0, 131076, 131072, 0, 196612, 131072, 0, 262148, 131072, 0, 327684, 0, 0, 393220, 0, 0, -458747, 0, 0, -393211, 0, 0, -327675, 131072, 0, -262139, 131072, 0, -196603, 131072, 0, -131067, 131072, 0, -65531, 131072, 0, 5, 131072, 0, 65541, 131072, 0, 131077, 131072, 0, 196613, 131072, 0, 262149, 131072, 0, 327685, 0, 0, 393221, 131072, 0, -458746, 0, 0, -393210, 131072, 0, -327674, 131072, 0, -262138, 131072, 0, -196602, 131072, 0, -131066, 131072, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 131072, 0, 262150, 131072, 0, 327686, 0, 0, 393222, 131072, 0, -458745, 0, 0, -393209, 131072, 0, -327673, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 131072, 0, -65529, 0, 0, 7, 131072, 0, 65543, 131072, 0, 131079, 131072, 0, 196615, 131072, 0, 262151, 131072, 0, 327687, 131072, 0, 393223, 131072, 0, 524279, 131072, 0, 524280, 131072, 0, 524281, 0, 0, 524282, 131072, 0, 524283, 131072, 0, 524284, 0, 0, 524285, 131072, 0, 524286, 131072, 0, 524287, 0, 0, 458752, 131072, 0, 458753, 131072, 0, 458754, 131072, 0, 458755, 131072, 0, 458756, 0, 0, 458757, 131072, 0, 458758, 0, 0, 458759, 131072, 0, 458760, 131072, 0, -524280, 131072, 0, -458744, 131072, 0, -393208, 131072, 0, -327672, 131072, 0, -262136, 131072, 0, -196600, 131072, 0, -131064, 131072, 0, -65528, 131072, 0, 8, 131072, 0, 65544, 131072, 0, 131080, 131072, 0, 196616, 131072, 0, 262152, 131072, 0, 327688, 131072, 0, 393224, 131072, 0, -524281, 0, 0, -524282, 131072, 0, -524283, 0, 0, -524284, 131072, 0, -524285, 131072, 0, -524286, 0, 0, -524287, 0, 0, -524288, 0, 0, -458753, 0, 0, -458754, 0, 0, -458755, 0, 0, -458756, 0, 0, -458757, 0, 0, -458758, 131072, 0, -458759, 131072, 0, -458760, 131072, 0, -458761, 131072, 0, -393225, 131072, 0, -327689, 131072, 0, -262153, 131072, 0, -196617, 131072, 0, -131081, 131072, 0, -65545, 131072, 0, -9, 131072, 0, 65527, 131072, 0, 131063, 131072, 0, 196599, 131072, 0, 262135, 131072, 0, 327671, 131072, 0, 393207, 131072, 0, 458743, 131072, 0, 589815, 131072, 0, 589816, 0, 0, 589817, 0, 0, 589818, 131072, 0, 589819, 0, 0, 589820, 0, 0, 655356, 131072, 0, 655357, 131072, 0, 655358, 131072, 0, 655359, 0, 0, 589823, 0, 0, 524288, 131072, 0, 524289, 131072, 0, 524290, 131072, 0, 524291, 131072, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 131072, 0, 524296, 131072, 0, 589832, 131072, 0, 589831, 131072, 0, 589830, 131072, 0, 589829, 131072, 0, 589828, 131072, 0, 589827, 131072, 0, 589826, 131072, 0, 589825, 131072, 0, 589824, 131072, 0, 589822, 131072, 0, 589821, 131072, 0, 655355, 131072, 0, 655352, 131072, 0, 655354, 131072, 0, 655353, 131072, 0, 655351, 131072, 0, -524297, 131072, 0, -589833, 131072, 0, -589832, 131072, 0, -589831, 131072, 0, -589830, 131072, 0, -589829, 131072, 0, -589828, 131072, 0, -589827, 131072, 0, -589826, 131072, 0, -589825, 131072, 0, -655360, 131072, 0, -655359, 131072, 0, -655358, 131072, 0, -655357, 131072, 0, -655356, 131072, 0, -589819, 131072, 0, -655355, 131072, 0, -655354, 131072, 0, -655353, 131072, 0, -655352, 131072, 0, -589816, 131072, 0, -589817, 0, 0, -589818, 131072, 0, -589820, 131072, 0, -589821, 131072, 0, -589822, 131072, 0, -589823, 0, 0, -589824, 0, 0, -524289, 0, 0, -524290, 0, 0, -524291, 0, 0, -524292, 0, 0, -524293, 131072, 0, -524294, 131072, 0, -524295, 131072, 0, -524296, 131072, 0, 720886, 131072, 0, 720887, 131072, 0, 720888, 131072, 0, 720889, 131072, 0, 720890, 131072, 0, 720891, 131072, 0, 720892, 131072, 0, 720893, 131072, 0, 720894, 131072, 0, 720895, 131072, 0, 655360, 131072, 0, 655361, 131072, 0, 655362, 131072, 0, 655363, 131072, 0, 655364, 131072, 0, 655365, 131072, 0, 655366, 131072, 0, 655367, 131072, 0, 655368, 131072, 0, 655369, 131072, 0, 589833, 131072, 0, 524297, 131072, 0, 458761, 131072, 0, 393225, 131072, 0, 327689, 131072, 0, 262153, 131072, 0, 196617, 131072, 0, 131081, 131072, 0, 65545, 131072, 0, 9, 131072, 0, -65527, 131072, 0, -131063, 131072, 0, -196599, 131072, 0, -262135, 131072, 0, -327671, 131072, 0, -393207, 131072, 0, -458743, 131072, 0, -524279, 131072, 0, -589815, 131072, 0, -655351, 131072, 0, -720887, 131072, 0, -720888, 131072, 0, -720889, 131072, 0, -720890, 131072, 0, -720891, 131072, 0, -720892, 131072, 0, -720893, 131072, 0, -720894, 131072, 0, -720895, 131072, 0, -720896, 131072, 0, -655361, 131072, 0, -655362, 131072, 0, -655363, 131072, 0, -655364, 131072, 0, -655365, 131072, 0, -655366, 131072, 0, -655367, 131072, 0, -655368, 131072, 0, -655369, 131072, 0, -655370, 131072, 0, -589834, 131072, 0, -524298, 131072, 0, -458762, 131072, 0, -393226, 131072, 0, -327690, 131072, 0, -262154, 131072, 0, -196618, 131072, 0, -131082, 131072, 0, -65546, 131072, 0, -10, 131072, 0, 65526, 131072, 0, 131062, 131072, 0, 196598, 131072, 0, 262134, 131072, 0, 327670, 131072, 0, 393206, 131072, 0, 458742, 131072, 0, 524278, 131072, 0, 589814, 131072, 0, 655350, 131072, 0)

[node name="Visuals" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-1, 1)

[node name="Vignette" type="Sprite2D" parent="Visuals"]
modulate = Color(1, 1, 1, 0.235294)
z_index = 999
z_as_relative = false
position = Vector2(1.00001, -1.00001)
scale = Vector2(4.5, 2.5)
texture = ExtResource("7_j0vy7")

[node name="Walls" type="Node2D" parent="Visuals"]
visible = false
z_as_relative = false
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-112, -1)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Sprite2D2" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-207, -65)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Sprite2D7" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(81, -65)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(64, 0, 32, 32)

[node name="Sprite2D3" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-159, -65)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D4" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-95, -65)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D5" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(-31, -65)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D6" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(33, -65)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(32, 0, 64, 32)

[node name="Sprite2D8" type="Sprite2D" parent="Visuals/Walls"]
z_as_relative = false
texture_filter = 1
position = Vector2(113, -65)
texture = ExtResource("8_ec04v")
region_enabled = true
region_rect = Rect2(224, 0, 32, 32)

[node name="Holes" type="Node2D" parent="Visuals"]
visible = false
z_as_relative = false
y_sort_enabled = true

[node name="AnimatedSprite2D" parent="Visuals/Holes" instance=ExtResource("9_epe7b")]

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Visuals/Holes"]
z_index = -1
z_as_relative = false
texture_filter = 1
position = Vector2(-207, 31)
sprite_frames = ExtResource("10_c4als")
animation = &"Wiggle"
autoplay = "Wiggle"

[node name="Characters" type="Node2D" parent="Visuals"]
z_as_relative = false
y_sort_enabled = true

[node name="Markers" type="Node2D" parent="Visuals"]
visible = false
z_as_relative = false
y_sort_enabled = true

[node name="Sign" parent="Visuals/Markers" instance=ExtResource("12_r185y")]
position = Vector2(-47, 31)
alpha_factor = 0.7

[node name="Sign2" parent="Visuals/Markers" instance=ExtResource("12_r185y")]
position = Vector2(-143, -37)
texture = ExtResource("13_gpfp7")
alpha_factor = 0.7

[node name="Sign3" parent="Visuals/Markers" instance=ExtResource("12_r185y")]
position = Vector2(-23, -30)
texture = ExtResource("14_sb36p")
alpha_factor = 0.7

[node name="Sign4" parent="Visuals/Markers" instance=ExtResource("12_r185y")]
position = Vector2(17, -30)
texture = ExtResource("15_tpn2l")
alpha_factor = 0.7

[node name="Sign5" parent="Visuals/Markers" instance=ExtResource("12_r185y")]
position = Vector2(65, -30)
texture = ExtResource("16_i3ify")
alpha_factor = 0.7

[node name="Sign6" parent="Visuals/Markers" instance=ExtResource("12_r185y")]
position = Vector2(49, -97)
texture = ExtResource("17_0nvkg")
alpha_factor = 0.7

[node name="Player" parent="." instance=ExtResource("18_oq3ns")]
position = Vector2(-16, 152)

[node name="GateButton" parent="." instance=ExtResource("20_thkxj")]
position = Vector2(-240, 56)

[node name="GateButton2" parent="." instance=ExtResource("20_thkxj")]
position = Vector2(-208, 119)

[node name="GateButton3" parent="." instance=ExtResource("20_thkxj")]
position = Vector2(-112, 104)

[node name="GateButton4" parent="." instance=ExtResource("20_thkxj")]
position = Vector2(208, 121)

[node name="GateButton5" parent="." instance=ExtResource("20_thkxj")]
position = Vector2(241, -7)

[node name="GateButton6" parent="." instance=ExtResource("20_thkxj")]
position = Vector2(241, -71)

[node name="GateButton7" parent="." instance=ExtResource("20_thkxj")]
position = Vector2(176, -120)

[node name="Cloner" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(-16, 92)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner2")

[node name="Cloner2" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(208, 89)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner")

[node name="Cloner3" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(144, 119)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner4")

[node name="Cloner4" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(208, 42)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner3")

[node name="Cloner5" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(208, 8)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner6")

[node name="Cloner6" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(240, -39)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner5")

[node name="Cloner7" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(240, -55)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner8")

[node name="Cloner8" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(240, -136)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner7")

[node name="Cloner9" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(241, -103)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner10")

[node name="Cloner10" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(-144, 137)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner9")

[node name="Cloner11" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(-112, 121)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner12")

[node name="Cloner12" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(-240, 137)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner11")

[node name="Cloner13" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(-208, 137)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner14")

[node name="Cloner14" parent="." node_paths=PackedStringArray("scene_reference", "target_node") instance=ExtResource("23_rmsu0")]
position = Vector2(-176, 72)
scene_reference = NodePath("..")
target_node = NodePath("../Cloner13")
